# trust-admet

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements-ci.txt  requirements-lock.txt  requirements.txt
.github/workflows/: tests.yml
api/: main.py
app/: Home.py  gradio_app.py
configs/dataset/: bbbp.yaml
data/processed/: BBBP_qc.csv  ClinTox_qc.csv  (+4 more)
docs/: ARCHITECTURE.md  architecture.md  datasets.md  experiment_log.md  experiment_protocol.md  experiments.md  paper_plan.md  roadmap.md  trust_framework.md
paper/: methods.md  results.md
scripts/: aggregate_multiseed_results.py  analyze_ad_vs_performance.py  analyze_uncertainty_vs_error.py  build_results_manifest.py  build_trust_profile.py  create_splits.py  download_data.py  evaluate_external_b3db.py  generate_leaderboard.py  generate_paper_assets.py  generate_reliability_diagrams.py  generate_reports.py  plot_external_validation.py  plot_multiseed_benchmark.py  plot_paper_benchmarks.py  predict_single.py  run_applicability_domain.py  run_chemberta_experiment.py  run_chemberta_token_attribution.py  run_classical_experiment.py  run_gcn_experiment.py  run_gnnexplainer_gin.py  run_integrated_gradients_mlp.py  run_mlp_experiment.py  run_mlp_uncertainty.py  run_multiseed_benchmark.py  run_shap_classical.py  run_xgboost_importance.py  summarize_ad_gap.py  summarize_uncertainty.py  test_gradio_backend.py  test_setup.py  train_classical_baseline.py  update_readme_benchmarks.py  update_readme_external_validation.py  validate_datasets.py
tests/: test_trust_engine.py
(+78 files in other folders)
